--- a/PL/CustomerListWindow.xaml
+++ b/PL/CustomerListWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="CustomerListWindow" Height="450" Width="800" Activated="Window_Activated"         Background="{StaticResource MyButtonBackground}">
     <Grid>
-        <DataGrid x:Name="customerToListDataGrid" ItemsSource="{Binding}" AutoGenerateColumns="False" EnableRowVirtualization="True"  Margin="0,113,3.6,107" RowDetailsVisibilityMode="VisibleWhenSelected" MouseDoubleClick="customerToListDataGrid_MouseDoubleClick">
+        <DataGrid x:Name="customerToListDataGrid" ItemsSource="{Binding}" AutoGenerateColumns="False" EnableRowVirtualization="True"  Margin="0,113,-48,107" RowDetailsVisibilityMode="VisibleWhenSelected" MouseDoubleClick="customerToListDataGrid_MouseDoubleClick" SelectionChanged="customerToListDataGrid_SelectionChanged">
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="idColumn" Binding="{Binding Id}" Header="Id" Width="SizeToHeader"/>
                 <DataGridTextColumn x:Name="nameColumn" Binding="{Binding Name}" Header="Name" Width="SizeToHeader"/>
@@ -15,7 +15,7 @@
                 <DataGridTextColumn x:Name="numOfParcelsReceivedColumn" Binding="{Binding NumOfParcelsReceived}" Header="Num Of Parcels Received" Width="SizeToHeader"/>
                 <DataGridTextColumn x:Name="numOfParcelsSentAndSuppliedColumn" Binding="{Binding NumOfParcelsSentAndSupplied}" Header="Num Of Parcels Sent And Supplied" Width="SizeToHeader"/>
                 <DataGridTextColumn x:Name="numOfParcelsSentNotSuppliedColumn" Binding="{Binding NumOfParcelsSentNotSupplied}" Header="Num Of Parcels Sent Not Supplied" Width="SizeToHeader"/>
-                <DataGridTextColumn x:Name="phoneColumn" Binding="{Binding Phone}" Header="Phone" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="phoneColumn" Binding="{Binding Phone}" Header="Phone" Width="Auto"/>
             </DataGrid.Columns>
         </DataGrid>
         <Button Content="Add New Customer" HorizontalAlignment="Left" Margin="356,355,0,0" VerticalAlignment="Top" Click="Button_Click" Width="214"/>
