--- a/PL/ParcelWindow.xaml
+++ b/PL/ParcelWindow.xaml
@@ -39,13 +39,13 @@
                     </ItemsPanelTemplate>
                 </ComboBox.ItemsPanel>
             </ComboBox>
-            <Label Content="Requested Time:" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Center"/>
+            <Label x:Name="requestedTimeLabel" Content="Requested Time:" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Center"/>
             <DatePicker x:Name="requestedTimeDatePicker" Grid.Column="1" HorizontalAlignment="Left" Margin="3,0,0,0" Grid.Row="3" SelectedDate="{Binding RequestedTime, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Grid.ColumnSpan="2"/>
-            <Label Content="Scheduled Time:" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Center"/>
+            <Label x:Name="ScheduledTimeLabel" Content="Scheduled Time:" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Center"/>
             <DatePicker x:Name="scheduledTimeDatePicker" Grid.Column="1" HorizontalAlignment="Left" Margin="3,0,0,0" Grid.Row="4" SelectedDate="{Binding ScheduledTime, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Grid.ColumnSpan="2"/>
-            <Label Content="Picked Up Time:" Grid.Column="0" HorizontalAlignment="Left" Margin="3,0,0,0" Grid.Row="5" VerticalAlignment="Center"/>
+            <Label x:Name="PickedTimeLabel" Content="Picked Up Time:" Grid.Column="0" HorizontalAlignment="Left" Margin="3,0,0,0" Grid.Row="5" VerticalAlignment="Center"/>
             <DatePicker x:Name="pickedUpTimeDatePicker" Grid.Column="1" HorizontalAlignment="Left" Margin="3,0,0,0" Grid.Row="5" SelectedDate="{Binding PickedUpTime, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Grid.ColumnSpan="2"/>
-            <Label Content="Delivered Time:" Grid.Column="0" HorizontalAlignment="Left" Margin="3,0,0,0" Grid.Row="6" VerticalAlignment="Center"/>
+            <Label x:Name="DeliveredTimeLabel" Content="Delivered Time:" Grid.Column="0" HorizontalAlignment="Left" Margin="3,0,0,0" Grid.Row="6" VerticalAlignment="Center"/>
             <DatePicker x:Name="deliveredTimeDatePicker" Grid.Column="1" HorizontalAlignment="Left" Margin="3,0,0,0" Grid.Row="6" SelectedDate="{Binding DeliveredTime, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Grid.ColumnSpan="2"/>
             <Label Content="Weight:" Grid.Column="0" HorizontalAlignment="Left" Margin="3,0,0,0" Grid.Row="2" VerticalAlignment="Center"/>
             <ComboBox x:Name="weightComboBox"  Text="{Binding Weight, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" Grid.Column="1" HorizontalAlignment="Left" Height="Auto" ItemsSource="{Binding}" Margin="3,0,0,0" Grid.Row="2" VerticalAlignment="Center" Width="120">
@@ -76,14 +76,14 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                <Label Content="Latitude:" Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="0" VerticalAlignment="Center"/>
+                <Label x:Name="LatitudeLabel" Content="Latitude:" Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="0" VerticalAlignment="Center"/>
                 <TextBox x:Name="latitudeTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3" Grid.Row="0" Text="{Binding ParcelDrones.Location.Latitude, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="120"/>
-                <Label Content="Longitude:" Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="1" VerticalAlignment="Center"/>
+                <Label x:Name="LongitudeLabel" Content="Longitude:" Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="1" VerticalAlignment="Center"/>
                 <TextBox x:Name="longitudeTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3" Grid.Row="1" Text="{Binding ParcelDrones.Location.Longitude, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="120"/>
             </Grid>
 
         </Grid>
-        <Button x:Name="OptionButtun" Content="OButtun" HorizontalAlignment="Left" Margin="600,100,0,0" Grid.RowSpan="2" Grid.Row="6" VerticalAlignment="Top"/>
+        <Button x:Name="OptionButtun" Content="OButtun" HorizontalAlignment="Left" Margin="600,100,0,0" Grid.RowSpan="2" Grid.Row="6" VerticalAlignment="Top" Click="OptionButtun_Click"/>
         <Button x:Name="closeButton" Content="close" HorizontalAlignment="Left" Margin="600,200,0,0" VerticalAlignment="Top" Click="Button_Click_Close" />
 
     </Grid>
